--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-<%= yield %>
+	<div class='container'>
+		<% flash.each do |msg| %>
+	     <%= content_tag(:div, msg, class: "alert alert-info") %>
+		<% end %>
+
+		<%= yield %>
+	</div>
 
 </body>
 </html>
