--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,21 @@
 <html>
 <head>
   <title>Run</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all", 
+  														"data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-	<div class='container'>
+<div class='container'>
+	<%= render 'layouts/header' %>
 		<% flash.each do |msg| %>
 	     <%= content_tag(:div, msg, class: "alert alert-info") %>
 		<% end %>
 
 		<%= yield %>
+
 	</div>
 
 </body>
